<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        
         >

   		<RelativeLayout
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content" 
   		    android:paddingLeft="@dimen/activity_horizontal_margin"
    		android:paddingRight="@dimen/activity_horizontal_margin" >

        	<TextView
            	android:id="@+id/q1"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/q1" />
		
        	<CheckBox
    	    	android:id="@+id/q1a"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignLeft="@+id/q1"
    	    	android:layout_below="@+id/q1"
    	    	android:text="@string/q1a" 
    	    	/>
        	
        	<CheckBox
    	    	android:id="@+id/q1b"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignLeft="@+id/q1a"
    	    	android:layout_below="@+id/q1a"
    	    	android:text="@string/q1b" 
    	    	/>
        	
        	<CheckBox
    	    	android:id="@+id/q1c"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignLeft="@+id/q1b"
    	    	android:layout_below="@+id/q1b"
    	    	android:text="@string/q1c" 
    	    	/>
        	
        	<CheckBox
    	    	android:id="@+id/q1d"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignLeft="@+id/q1c"
    	    	android:layout_below="@+id/q1c"
    	    	android:text="@string/q1d" 
    	    	/>
        	
        	<TextView
            	android:id="@+id/q2"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_alignLeft="@+id/q1d"
    	    	android:layout_below="@+id/q1d"
            	android:text="@string/q1" />
		
        	<CheckBox
    	    	android:id="@+id/q2a"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignLeft="@+id/q2"
    	    	android:layout_below="@+id/q2"
    	    	android:text="@string/q1a" />
        	
        	<CheckBox
    	    	android:id="@+id/q2b"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignLeft="@+id/q2a"
    	    	android:layout_below="@+id/q2a"
    	    	android:text="@string/q1b" />
        	
        	<CheckBox
    	    	android:id="@+id/q2c"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignLeft="@+id/q2b"
    	    	android:layout_below="@+id/q2b"
    	    	android:text="@string/q1c" />
        	
        	<CheckBox
    	    	android:id="@+id/q2d"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignLeft="@+id/q2c"
    	    	android:layout_below="@+id/q2c"
    	    	android:text="@string/q1d" />
        
        	<TextView
            	android:id="@+id/q3"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_alignLeft="@+id/q2d"
    	    	android:layout_below="@+id/q2d"
            	android:text="@string/q1" />
		
        	<CheckBox
    	    	android:id="@+id/q3a"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignLeft="@+id/q3"
    	    	android:layout_below="@+id/q3"
    	    	android:text="@string/q1a" />
        	
        	<CheckBox
    	    	android:id="@+id/q3b"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignLeft="@+id/q3a"
    	    	android:layout_below="@+id/q3a"
    	    	android:text="@string/q1b" />
        	
        	<CheckBox
    	    	android:id="@+id/q3c"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignLeft="@+id/q3b"
    	    	android:layout_below="@+id/q3b"
    	    	android:text="@string/q1c" />
        	
        	<CheckBox
    	    	android:id="@+id/q3d"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignLeft="@+id/q3c"
    	    	android:layout_below="@+id/q3c"
    	    	android:text="@string/q1d" />
        	
        	<TextView
            	android:id="@+id/q4"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_alignLeft="@+id/q3d"
    	    	android:layout_below="@+id/q3d"
            	android:text="@string/q1" />
		
        	<CheckBox
    	    	android:id="@+id/q4a"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignLeft="@+id/q4"
    	    	android:layout_below="@+id/q4"
    	    	android:text="@string/q1a" />
        	
        	<CheckBox
    	    	android:id="@+id/q4b"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignLeft="@+id/q4a"
    	    	android:layout_below="@+id/q4a"
    	    	android:text="@string/q1b" />
        	
        	<CheckBox
    	    	android:id="@+id/q4c"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignLeft="@+id/q4b"
    	    	android:layout_below="@+id/q4b"
    	    	android:text="@string/q1c" />
        	
        	<CheckBox
    	    	android:id="@+id/q4d"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:layout_alignLeft="@+id/q4c"
    	    	android:layout_below="@+id/q4c"
    	    	android:text="@string/q1d" />
        	
        	<Button
        	    android:id="@+id/submit"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_centerHorizontal="true"
        	    android:layout_below="@+id/q4d"
        	    android:layout_marginTop="20dp"
        	    android:text="@string/submit"
        	    android:onClick="check"/>
    	</RelativeLayout>
    </ScrollView>

</RelativeLayout>